--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "author": "",
   "license": "ISC",
-  "workspaces":[
+  "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
